# MyAppPorject

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md
src/: main.cpp
tests/: CMakeLists.txt
